liftoff calc hbs changes.

--- a/app/templates/deo-space-program/liftoff-calculator.hbs
+++ b/app/templates/deo-space-program/liftoff-calculator.hbs
@@ -20,9 +20,8 @@
         <div id="DSP_main">
           <section>
             <h2>DSP Liftoff Calculator for KSP</h2>
-            <p>Not sure which engine to select for a stage? 
-            Well, then you have come to the right place 
-            as this calculator is about engine selection based on the vessel weight and the body where liftoff is happening</p>
+            <p>Not sure which engine to select for a stage? Well, then you have come to the right place!</p>
+            <p>Due to the amount of informa</p>
             <p>{{bodySelectedWatcher}}{{calculateEnginesReqs}}
               <label class="dsp_select_label">Body:</label> <div class="dsp_select">{{custom-select content=KSP_BODIES action=(action (mut selectedBodyName))}}</div>
               {{selectedBodyName}} gravity is {{selectedBodyGravity}} m/s<sup>2</sup></p>
