Changed DSP pictures and homepage info

--- a/app/styles/_dsp.scss
+++ b/app/styles/_dsp.scss
@@ -117,27 +117,15 @@ $dsp-background-color: hsla(190, 70%, 60%, 0.97);
 }
 
 #DSP_BG_history {
-    background-image: url("http://i.imgur.com/oOXT5Sy.png");
-}
-
-#DSP_BG_kerbals {
-    background-image: url("http://i.imgur.com/zBPR2bp.png");
-}
-
-#DSP_BG_missions {
-    background-image: url("http://i.imgur.com/jvU1ztS.png");
-}
-
-#DSP_BG_achievements {
-	background-image: url("http://i.imgur.com/6pSy1Kz.png");
+    background-image: url("http://i.imgur.com/LPz1i0a.png");
 }
 
 #DSP_BG_future {
-    background-image: url("http://i.imgur.com/lxm4EeI.png");
+    background-image: url("http://i.imgur.com/LmJXVJj.png");
 }
 
 #DSP_BG_copyright {
-    background-image: url("http://i.imgur.com/aX47gqR.png");
+    background-image: url("http://i.imgur.com/6pSy1Kz.png");
 }
 
 // Sidebar definitions
