--- a/app/templates/deo-space-program/index.hbs
+++ b/app/templates/deo-space-program/index.hbs
@@ -18,12 +18,14 @@
 			<div class="col-sm-9 col-md-10 main" >
 				<div id="DSP_main">
 					<section>
+						<h3>The story of how a single man played Kerbal Space Program since its alpha back in 2015...</h3>
 						<article class="intro">
-						<p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behing it.
+						<p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behind it.
 						Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
 						The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p>
-						<p>However, 2016 is not simply the end of this nerdy history, but actually a new start for both the game and the developer playing it!
-						The developer is losing weight and the game is reaching a new phase of being ported to Unity 5 which will allow it to reach console players and not only the "PC Master Race" players.</p>
+						<p>Now forward to 2016, you will see the single man still single, but with less weight and more stamina. In the same way, you now see KSP in 1.1 which is in a much better shape to use 64bits while really using the latest CPUs cores to their max.</p>
+						<p>This website contains a history of my endeavors on KSP, my achievements while also showing off my brand new (if you are reading it in 2016) TWR liftoff calculator. If you know a bit about KSP, then you will understand its purpose. 
+						If not, this calculator is meant to show the user possible engines setup and their cost based on how much dry payload (non-fuel stuff being carried), and the body where the vessel is going to liftoff.</p>
 						</article>
 					</section>
 				</div>
